# aeria-apps

./: .env.example  .gitignore  Dockerfile  app.py  docker-compose.yml  gen-og.py  logs.txt  main.py  og-card.html  pyproject.toml  run.py  wsgi.py
.github/workflows/: deploy.yml
crm/: .env.example  Dockerfile  app.py  auth_db.py  crm_db.py  daily_report.py  deploy.sh  docker-compose.yml  requirements.txt
crm/data/: auth.db  crm.db
crm/data/templates/: analise-financeira.md  atendimento-whatsapp.md  gerador-relatorios.md  pesquisa-concorrentes.md
crm/static/: crm.css  tracker.js
crm/templates/: admin_analytics.html  admin_comments.html  admin_contact.html  admin_contacts.html  admin_dashboard.html  admin_login.html  client_academy.html  client_community.html  client_course.html  client_dashboard.html  client_events.html  client_landing.html  client_lesson.html  client_login.html  client_new_topic.html  client_register.html  client_templates.html  client_topic.html
data/: content.json
html/archive/: index.html.legacy
propostas/: razsports-selfware-demo.md  razsports-selfware-scheduling.md
static/css/: indica-aqui.css  style.css
templates/: 404.html  500.html  admin.html  admin_login.html  base.html  index.html  indicacoes_index.html  indicacoes_prestador.html  indicacoes_servico.html
