[project]
name = "aeria-apps-site"
version = "0.1.0"
description = "Site dinâmico da Aeria Apps com Flask, painel administrativo e conteúdo em JSON."
requires-python = ">=3.11,<3.12"
dependencies = [
    "flask==3.1.1",
    "gunicorn==23.0.0",
    "pillow>=12.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
